# Jezyki_Skryptowe

./: .gitignore  CMakeLists.txt  Head  Head.cpp  Makefile  README.md  copy_batch_scripts.sh  copy_list3_dependencies.sh  make_dirs.sh  test.txt
list1/: CMakeLists.txt
list1/src/: KodPowrotu.cpp  Paths.cpp  PokazPodobne.cpp  PokazWszystkie.cpp  PokazWszystkiev2.cpp  Skrypt.cpp
list2/src/: Head.cpp  SortDirectories.sh  Tail.cpp
list3/: CMakeLists.txt
list3/src/: Avg.cpp  CountCasesContinentAndMonth.bat  ShowDeaths.bat  ShowDeathsOrCases.bat  Sort.cpp  Sum.cpp  Utils.hpp
list4/src/: Max.bat  k_primes_finder.py  moving_average.py  palindrome.py  pi_checker.py  prime_finder.py  srednia.bat
list5/src/: BatchCovid.bat  CppCovid.cpp  FindSimilarCountries.py  JavaCovid.java  Leven.py  LevenTest.py  PyCovid.py
list6/src/: covid_parser.py  script_tester.py  sum_deaths_and_cases.py  sum_for_country.py  sum_for_date.py  sum_for_date_country.py
list7/src/: Controlled_text.py  First_name.py  Ident_number.py  Last_name.py  List7_tester.py  Person.py  PopularneImiona.txt  Test_data_generator.py  nazw_meskie.txt  nazw_zenskie.txt
list8/src/: app.py  console.py  gui.py  helpers.py  logger.py  main.py  program.py  task_request.py
list8/src/helpers/: data_record.py  (+1 more)
list9/src/: app.py  conf.ini  main.py
scripts/: copy_batch_scripts.sh  copy_list3_dependencies.sh  copy_list9_dependencies.sh  copy_py_bat_txt_scripts.sh  make_dirs.sh  measure_list5_task2_times.sh  run_list6_raport.sh
src/: Head.cpp  PODKATALOGI.sh  SortDirectories.sh  SubDirectories.sh  Tail.cpp
(+3 files in other folders)
