CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
project(list1)

add_executable(KodPowrotu src/KodPowrotu.cpp)
add_executable(PokazPodobne src/PokazPodobne.cpp)
add_executable(PokazWszystkie src/PokazWszystkie.cpp)
add_executable(PokazWszystkiev2 src/PokazWszystkiev2.cpp)
add_executable(Skrypt src/Skrypt.cpp)
add_executable(Paths src/Paths.cpp)